--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         Shereen helps you to think clearly, grapple in a healthy manner, and ultimately find the answer that works
         for you so you can be the best version of yourself!">
   <meta name="og:image" property="og:image" content="./resouces/headshot.jpeg">
-  <!-- <meta property='og:url' content="https://www.vroomkigali.com" />
-    <link rel="icon" href="./resources/logo.png"> -->
+  <meta property='og:url' content="https://www.empowermentwithshereen.org/" />
+  <!-- <link rel="icon" href="./resources/headshot.jpeg"> -->
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
