add logos and restyle parallax and sections

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         for you so you can be the best version of yourself!">
   <meta name="og:image" property="og:image" content="./resouces/headshot.jpeg">
   <meta property='og:url' content="https://www.empowermentwithshereen.org/" />
-  <!-- <link rel="icon" href="./resources/headshot.jpeg"> -->
+  <link rel="icon" href="./resources/tree.png">
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -35,7 +35,9 @@
   <div class="navbar-fixed">
     <nav class="white" role="navigation">
       <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo">Logo</a>
+        <a id="logo-container" href="#" class="brand-logo">
+          <img class="nav_logo" src="./resources/tree.png" alt="" srcset="">
+        </a>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons brown-text">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a class="brown-text menu-item" href="#services">Services</a></li>
@@ -56,35 +58,34 @@
     <li><a class="brown-text menu-item" href="#contact">Contact</a></li>
   </ul>
 
+  <div class="container">
+    <div class="section">
+      <div class="row center">
+        <img id="main_logo" src="./resources/main_logo.png" alt="" srcset="">
+      </div>
 
-  <div id="index-banner" class="parallax-container">
-    <div class="no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h3 class="header center white-text text-lighten-2">Empowerment with Shereen</h3>
-        <br><br>
-        <div class="row center">
-          <h5 class="header col s12 light white-text">I help clients recognize and harness their full
-            potential through
-            the development of a deep understanding of how they approach challenges, seize opportunities, and engage in
-            life confidently and fully.</h5>
-        </div>
-        <div class="row center">
-          <a href="#contact" class="btn-large waves-effect waves-light brown lighten-1">Get in touch</a>
-        </div>
-        <br><br>
-
+      <div class="row center">
+        <h5 class="header col s12 light">I help clients recognize and harness their full
+          potential through
+          the development of a deep understanding of how they approach challenges, seize opportunities, and engage in
+          life confidently and fully.</h5>
+      </div>
+      <div class="row center">
+        <a href="#contact" class="btn-large waves-effect waves-light brown lighten-1">Get in touch</a>
       </div>
     </div>
-    <div class="parallax"><img src="./resources/background1.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
+  <div id="index-banner" class="parallax-container">
+    <div class="parallax" id="services"><img src="./resources/background1.JPG" alt="Unsplashed background img 1"></div>
+  </div>
+
+
+  <!--   Icon Section   -->
   <div class="container">
     <div class="section">
-
-      <!--   Icon Section   -->
-      <div class="row" id="services">
+      <div class="row">
         <h4 class="center">Services</h4>
         <div class="col s12 m4">
           <div class="icon-block">
@@ -119,9 +120,17 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
 
-      <!-- About Section -->
-      <div class="row" id="about">
+  <div id="index-banner" class="parallax-container">
+    <div class="parallax" id="about"><img src="./resources/background4.JPG" alt="Unsplashed background img 1"></div>
+  </div>
+
+  <!-- About Section -->
+  <div class="container">
+    <div class="section">
+      <div class="row">
         <div class="col s12 center">
           <h4>About Shereen</h4>
           <div class="row">
@@ -145,21 +154,11 @@
           </div>
         </div>
       </div>
-
     </div>
   </div>
 
-
   <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">Shereen Beydoun is a Certified Professional Coach and Energy Leadership
-            Index-Master Practitioner.</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax" id="purpose"><img src="./resources/background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax" id="purpose"><img src="./resources/background3.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <div class="container">
@@ -180,25 +179,19 @@
     </div>
   </div>
 
-
   <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">Proactive. Energetic. Fun. Brilliant. Genuine. Passionate. Listener.</h5>
-        </div>
-      </div>
+    <div class="parallax" id="testimonials"><img src="./resources/background2.jpg" alt="Unsplashed background img 2">
     </div>
-    <div class="parallax"><img src="./resources/background3.jpg" alt="Unsplashed background img 3"></div>
   </div>
+
   <div class="container">
     <div class="section">
-      <div class="row" id="testimonials">
+      <div class="row">
         <div class="col s12 center">
           <h4>Testimonials</h4>
           <div class="row">
             <div class="col s12">
-              <div class="card-panel blue lighten-5 z-depth-5">
+              <div class="card-panel blue lighten-5 z-depth-5 hoverable">
                 <div class="icon-block">
                   <h2 class="center brown-text"><i class="material-icons">grade</i></h2>
                   <blockquote class="black-text">I was always skeptical about life coaches, but Shereen never made me
@@ -223,7 +216,7 @@
           </div>
           <div class="row">
             <div class="col s12">
-              <div class="card-panel blue lighten-5 z-depth-5">
+              <div class="card-panel blue lighten-5 z-depth-5 hoverable">
                 <div class="icon-block">
                   <h2 class="center brown-text"><i class="material-icons">grade</i></h2>
                   <blockquote class="black-text">Shereen is serious a 1 in a million human being. She's proactive,
@@ -242,7 +235,7 @@
           </div>
           <div class="row">
             <div class="col s12">
-              <div class="card-panel blue lighten-5 z-depth-5">
+              <div class="card-panel blue lighten-5 z-depth-5 hoverable">
                 <div class="icon-block">
                   <h2 class="center brown-text"><i class="material-icons">grade</i></h2>
                   <blockquote class="black-text">Shereen is a genuine and passionate human being. She is a keen listener
