--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
   <div id="index-banner" class="parallax-container">
-    <div class="parallax" id="services"><img src="./resources/background1.JPG" alt="Unsplashed background img 1"></div>
+    <div class="parallax" id="services"><img src="./resources/background1.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -124,7 +124,7 @@
   </div>
 
   <div id="index-banner" class="parallax-container">
-    <div class="parallax" id="about"><img src="./resources/background4.JPG" alt="Unsplashed background img 1"></div>
+    <div class="parallax" id="about"><img src="./resources/background4.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
   <!-- About Section -->
