--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         for you so you can be the best version of yourself!">
   <meta name="og:image" property="og:image" content="./resouces/headshot.jpeg">
   <meta property='og:url' content="https://www.empowermentwithshereen.org/" />
-  <link rel="icon" href="./resources/tree.png">
+  <link rel="icon" href="./resources/main_logo.png">
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
