rearranged images and sections

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
         </a>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons brown-text">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a class="brown-text menu-item" href="#services">Services</a></li>
           <li><a class="brown-text menu-item" href="#about">About</a></li>
+          <li><a class="brown-text menu-item" href="#services">Services</a></li>
+
           <li><a class="brown-text menu-item" href="#purpose">Purpose</a></li>
           <li><a class="brown-text menu-item" href="#testimonials">Testimonials</a></li>
           <li><a class="brown-text menu-item" href="#contact">Contact</a></li>
@@ -51,8 +52,9 @@
   </div>
 
   <ul id="nav-mobile" class="sidenav">
-    <li><a class="brown-text menu-item" href="#services">Services</a></li>
     <li><a class="brown-text menu-item" href="#about">About</a></li>
+    <li><a class="brown-text menu-item" href="#services">Services</a></li>
+
     <li><a class="brown-text menu-item" href="#purpose">Purpose</a></li>
     <li><a class="brown-text menu-item" href="#testimonials">Testimonials</a></li>
     <li><a class="brown-text menu-item" href="#contact">Contact</a></li>
@@ -76,13 +78,44 @@
     </div>
   </div>
 
-
+  <!-- About Section -->
   <div id="index-banner" class="parallax-container">
-    <div class="parallax" id="services"><img src="./resources/background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax" id="about"><img src="./resources/begin.jpg"
+        alt="Don't give up. You are not alone. You matter"></div>
+  </div>
+  <div class="container">
+    <div class="section">
+      <div class="row">
+        <div class="col s12 center">
+          <h4>About Shereen</h4>
+          <div class="row">
+            <div class="col s12 m6">
+              <img src="./resources/headshot.jpeg" class="z-depth-5 responsive-img circle" alt="">
+            </div>
+            <div class="col s12 m6">
+              <p class="right-align light">Shereen Beydoun is a Certified Professional Coach and Energy Leadership
+                Index-Master Practitioner. She received her undergraduate degree from Georgetown University and two
+                Masters
+                degrees from Columbia University. Shereen has experienced most of her life in New York City, and spends
+                significant amounts of time traveling the world. Her 35-year career prior to coaching was as an educator
+                in
+                three leading independent schools in the United States and one in the Middle East. In her past role, she
+                counseled hundreds of parents, students, and faculty. Coaching has been a natural passion for her to
+                pursue,
+                and she offers great comfort, stability and resourcefulness to her clients today. She is the mother of
+                four
+                adult children and enjoys two cats.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-
-  <!--   Icon Section   -->
+  <!-- Services Section -->
+  <div id="index-banner" class="parallax-container">
+    <div class="parallax" id="services"><img src="./resources/signs.jpg" alt="Unsplashed background img 1"></div>
+  </div>
   <div class="container">
     <div class="section">
       <div class="row">
@@ -123,42 +156,12 @@
     </div>
   </div>
 
-  <div id="index-banner" class="parallax-container">
-    <div class="parallax" id="about"><img src="./resources/background4.jpg" alt="Unsplashed background img 1"></div>
-  </div>
 
-  <!-- About Section -->
-  <div class="container">
-    <div class="section">
-      <div class="row">
-        <div class="col s12 center">
-          <h4>About Shereen</h4>
-          <div class="row">
-            <div class="col s12 m6">
-              <img src="./resources/headshot.jpeg" class="z-depth-5 responsive-img circle" alt="">
-            </div>
-            <div class="col s12 m6">
-              <p class="right-align light">Shereen Beydoun is a Certified Professional Coach and Energy Leadership
-                Index-Master Practitioner. She received her undergraduate degree from Georgetown University and two
-                Masters
-                degrees from Columbia University. Shereen has experienced most of her life in New York City, and spends
-                significant amounts of time traveling the world. Her 35-year career prior to coaching was as an educator
-                in
-                three leading independent schools in the United States and one in the Middle East. In her past role, she
-                counseled hundreds of parents, students, and faculty. Coaching has been a natural passion for her to
-                pursue,
-                and she offers great comfort, stability and resourcefulness to her clients today. She is the mother of
-                four
-                adult children and enjoys two cats.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
+
 
   <div class="parallax-container valign-wrapper">
-    <div class="parallax" id="purpose"><img src="./resources/background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax" id="purpose"><img src="./resources/stones.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <div class="container">
@@ -180,7 +183,7 @@
   </div>
 
   <div class="parallax-container valign-wrapper">
-    <div class="parallax" id="testimonials"><img src="./resources/background2.jpg" alt="Unsplashed background img 2">
+    <div class="parallax" id="testimonials"><img src="./resources/breathe.jpg" alt="Unsplashed background img 2">
     </div>
   </div>
 
