Replace clients with people

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
   <!-- Open graph -->
   <meta name="description" content="Empowerment with Shereen offers professional, confidential coaching services by a certified IPEC, ELI-MP
-        coach. My focus is on clients seeking support and guidance during transitions when they often feel
+        coach. My focus is on people seeking support and guidance during transitions when they often feel
         overwhelmed, frustrated, stalled, deflated or simply lost. Life brings some rough times, such as a
         significant breakup, choosing the “perfect” college, pursuing a new career, and considering relocation.
         Shereen helps you to think clearly, grapple in a healthy manner, and ultimately find the answer that works
         for you so you can be the best version of yourself!">
   <meta name="og:title" property="og:title" content="Empowerment with Shereen">
   <meta name="og:description" property="og:description" content="Empowerment with Shereen offers professional, confidential coaching services by a certified IPEC, ELI-MP
-        coach. My focus is on clients seeking support and guidance during transitions when they often feel
+        coach. My focus is on people seeking support and guidance during transitions when they often feel
         overwhelmed, frustrated, stalled, deflated or simply lost. Life brings some rough times, such as a
         significant breakup, choosing the “perfect” college, pursuing a new career, and considering relocation.
         Shereen helps you to think clearly, grapple in a healthy manner, and ultimately find the answer that works
@@ -67,7 +67,7 @@
       </div>
 
       <div class="row center">
-        <h5 class="header col s12 light">I help clients recognize and harness their full
+        <h5 class="header col s12 light">I help people recognize and harness their full
           potential through
           the development of a deep understanding of how they approach challenges, seize opportunities, and engage in
           life confidently and fully.</h5>
@@ -102,7 +102,7 @@
                 three leading independent schools in the United States and one in the Middle East. In her past role, she
                 counseled hundreds of parents, students, and faculty. Coaching has been a natural passion for her to
                 pursue,
-                and she offers great comfort, stability and resourcefulness to her clients today. She is the mother of
+                and she offers great comfort, stability and resourcefulness to her people today. She is the mother of
                 four
                 adult children and enjoys two cats.</p>
             </div>
@@ -170,7 +170,7 @@
         <div class="col s12 center">
           <h4>Purpose</h4>
           <p>Empowerment with Shereen offers professional, confidential coaching services by a certified IPEC, ELI-MP
-            coach. My focus is on clients seeking support and guidance during transitions when they often feel
+            coach. My focus is on people seeking support and guidance during transitions when they often feel
             overwhelmed, frustrated, stalled, deflated or simply lost. Life brings some rough times, such as a
             significant breakup, choosing the “perfect” college, pursuing a new career, and considering relocation.
             Shereen helps you to think clearly, grapple in a healthy manner, and ultimately find the answer that works
