--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+
 </head>
 
 <body>
@@ -73,7 +76,13 @@
           life confidently and fully.</h5>
       </div>
       <div class="row center">
-        <a href="#contact" class="btn-large waves-effect waves-light brown lighten-1">Get in touch</a>
+        <a target="_blank" rel="noopener noreferrer" class="black-text right-margin" href="tel:+19178851719"><i
+            class="material-icons">call</i></a>
+        <a target="_blank" rel="noopener noreferrer" class="black-text right-margin left-margin"
+          href="mailto:empowermentwithshereen@gmail.com"><i class="material-icons">email</i></a>
+        <a target="_blank" rel="noopener noreferrer" class="black-text left-margin"
+          href="https://wa.me/19178851719"><img src="https://img.icons8.com/ios-filled/25/000000/whatsapp.png" /></a>
+
       </div>
     </div>
   </div>
@@ -150,6 +159,37 @@
             <p class="light">Offer 60 – 90 minute workshops designed to increase team morale, effectiveness and
               efficiency by using trust-building exercises, deepening understanding of team functioning, and practical
               application of problem-solving skills. </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <h4 class="center">Rates</h4>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">schedule</i></h2>
+            <h5 class="center">Initial Consultation</h5>
+
+            <p class="light">The Initial Consultation is complimentary and lasts 30 - 45 minutes.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">linear_scale</i></h2>
+            <h5 class="center">Varying Rates For Multiple Sessions</h5>
+
+            <p class="light">Empowerment with Shereen works with a variety of clients internationally. Therefore, rates
+              are based on a sliding scale with discounts for multiple sessions.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">read_more</i></h2>
+            <h5 class="center">Learn More</h5>
+
+            <p class="light"><a href="#contact" class="link">Get in Touch</a> to
+              discuss rates further.</p>
           </div>
         </div>
       </div>
@@ -264,12 +304,14 @@
         <div class="col s12">
           <h5 class="center black-text" id="contact">Get in touch</h5>
           <div class="center">
-            <a class="black-text right-margin" href="tel:+19178851719"><i class="material-icons">call</i></a>
-            <a class="black-text left-margin" href="https://wa.me/19178851719"><img
+            <a target="_blank" rel="noopener noreferrer" class="black-text right-margin" href="tel:+19178851719"><i
+                class="material-icons">call</i></a>
+            <a target="_blank" rel="noopener noreferrer" class="black-text right-margin left-margin"
+              href="mailto:empowermentwithshereen@gmail.com"><i class="material-icons">email</i></a>
+            <a target="_blank" rel="noopener noreferrer" class="black-text left-margin"
+              href="https://wa.me/19178851719"><img
                 src="https://img.icons8.com/ios-filled/25/000000/whatsapp.png" /></a>
           </div>
-
-
         </div>
       </div>
     </div>
