Fix rates section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ul class="right hide-on-med-and-down">
           <li><a class="brown-text menu-item" href="#about">About</a></li>
           <li><a class="brown-text menu-item" href="#services">Services</a></li>
-
+          <li><a class="brown-text menu-item" href="#rates">RATES</a></li>
           <li><a class="brown-text menu-item" href="#purpose">Purpose</a></li>
           <li><a class="brown-text menu-item" href="#testimonials">Testimonials</a></li>
           <li><a class="brown-text menu-item" href="#contact">Contact</a></li>
@@ -162,34 +162,25 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <!-- Rates Section -->
+  <div id="index-banner" class="parallax-container">
+    <div class="parallax" id="rates"><img src="./resources/rates.jpeg" alt="Unsplashed background img 1"></div>
+  </div>
+  <div class="container">
+    <div class="section">
       <div class="row">
-        <h4 class="center">Rates</h4>
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">schedule</i></h2>
-            <h5 class="center">Initial Consultation</h5>
+        <h4 class="center">RATES</h4>
+        <div class="col s12">
+          <div class="card brown darken-1">
+            <div class="card-content white-text">
+              <p>The Initial Consultation is complimentary and lasts 30 – 45 minutes. Empowerment with Shereen works
+                with a variety of clients internationally. Therefore, rates are based on a sliding scale with discounts
+                for multiple sessions. You are invited to use the Get in Touch link to discuss rates further.</p>
+            </div>
 
-            <p class="light">The Initial Consultation is complimentary and lasts 30 - 45 minutes.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">linear_scale</i></h2>
-            <h5 class="center">Varying Rates For Multiple Sessions</h5>
-
-            <p class="light">Empowerment with Shereen works with a variety of clients internationally. Therefore, rates
-              are based on a sliding scale with discounts for multiple sessions.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">read_more</i></h2>
-            <h5 class="center">Learn More</h5>
-
-            <p class="light"><a href="#contact" class="link">Get in Touch</a> to
-              discuss rates further.</p>
           </div>
         </div>
       </div>
