--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ul class="right hide-on-med-and-down">
           <li><a class="brown-text menu-item" href="#about">About</a></li>
           <li><a class="brown-text menu-item" href="#services">Services</a></li>
-          <li><a class="brown-text menu-item" href="#rates">RATES</a></li>
+          <li><a class="brown-text menu-item" href="#rates">Rates</a></li>
           <li><a class="brown-text menu-item" href="#purpose">Purpose</a></li>
           <li><a class="brown-text menu-item" href="#testimonials">Testimonials</a></li>
           <li><a class="brown-text menu-item" href="#contact">Contact</a></li>
