--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <ul id="nav-mobile" class="sidenav">
     <li><a class="brown-text menu-item" href="#about">About</a></li>
     <li><a class="brown-text menu-item" href="#services">Services</a></li>
-
+    <li><a class="brown-text menu-item" href="#rates">Rates</a></li>
     <li><a class="brown-text menu-item" href="#purpose">Purpose</a></li>
     <li><a class="brown-text menu-item" href="#testimonials">Testimonials</a></li>
     <li><a class="brown-text menu-item" href="#contact">Contact</a></li>
