new testimonial. highlight reviewer.

--- a/index.html
+++ b/index.html
@@ -228,6 +228,23 @@
               <div class="card-panel blue lighten-5 z-depth-5 hoverable">
                 <div class="icon-block">
                   <h2 class="center brown-text"><i class="material-icons">grade</i></h2>
+                  <blockquote class="black-text">Shereen is authentically, sincerely compassionate. She's also very
+                    wise. For example, she helped me internalize that personal development isn't a straight line but
+                    more like "two steps forward and one step back". This helped me to not beat myself over setbacks and
+                    to make progress with positive energy. Shereen listens first to gain an understanding of your unique
+                    situation and perspective. Add in her experience and attitude toward life and you have an excellent
+                    partner on the road to empowerment.
+                  </blockquote>
+                  <h6>Daru, Maryland, USA</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <div class="card-panel blue lighten-5 z-depth-5 hoverable">
+                <div class="icon-block">
+                  <h2 class="center brown-text"><i class="material-icons">grade</i></h2>
                   <blockquote class="black-text">I was always skeptical about life coaches, but Shereen never made me
                     feel
                     like
@@ -241,9 +258,8 @@
                     always resonates with me when I am alone. I never felt uncomfortable approaching her with any
                     problem.
                     Amazing is an understatement; Shereen is the best!
-                    Farah H., Beirut, Lebanon
-
                   </blockquote>
+                  <h6>Farah H., Beirut, Lebanon</h6>
                 </div>
               </div>
             </div>
@@ -261,8 +277,8 @@
                     also
                     inspire the best from them. I would absolutely recommend Shereen's coaching and consulting to
                     professionals who want to be seen, heard, and inspired to produce exceptional results.
-                    Brooke R., Calgary, Canada
                   </blockquote>
+                  <h6>Brooke R., Calgary, Canada</h6>
                 </div>
               </div>
             </div>
@@ -277,8 +293,8 @@
                     really helped me to believe in myself, trust my intuition, and make better choices. She helped me to
                     reframe my thinking after a lifetime of racing thoughts and catastrophizing! My only regret is not
                     going to her sooner.
-                    Steve D., New York, NY
                   </blockquote>
+                  <h6>Steve D., New York, NY</h6>
                 </div>
               </div>
             </div>
